# chalmers.it

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  Dockerfile  README.md  docker-compose-dev.yml  docker-compose.dev.yml  docker-compose.gamma.yml  docker-compose.prod.yml  docker-compose.yml  eslint.config.mjs  flake.nix  next-logger.config.cjs  next-logger.config.js  next.config.js  next.config.mjs  next.config.ts  package-lock.json  package.json  pino-pretty-transport.cjs  pino-pretty-transport.js  pnpm-lock.yaml  prettier.config.mjs
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug-report.yml  suggestion-user-story.yml  suggestion.yml
.github/workflows/: build_test.yml  code_validation.yml  docker.yml  lint.yml  validation.yml
backend/: .gitignore  Cargo.toml  Dockerfile  go.mod  go.sum  main.go  sqlc.yaml
backend/api/v1/: news.go  router.go
backend/database/: models.go  query.sql  query.sql.go  schema.sql
backend/docs/: docs.go  swagger.json  swagger.yaml
backend/logging/: Logger.go  SlogHandler.go  SlogLoggerJSON.go  SlogLoggerText.go
backend/middleware/: LoggingMiddleware.go
backend/src/: main.rs
backend/src/api/: mod.rs
backend/src/api/v1/: mod.rs  news.rs
backend/src/logging/: formatter.rs  http.rs  mod.rs
frontend/: package.json  pnpm-lock.yaml
prisma/: schema.prisma  seed.ts
prisma-old-site/: schema.prisma
public/: humans.txt
src/: i18nConfig.ts  instrumentation.ts  logger.ts  middleware.ts  prisma.ts  proxy.ts
src/actions/: banners.ts  divisionPages.ts  documents.ts  events.ts  (+10 more)
(+316 files in other folders)
