[package]
name = "chalmersit-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
dotenv = "0.15.0"

tower-layer = "0.3"
tower-http = { version = "0.4.4", features = ["trace"] }
tower-request-id = "0.2.1"
hyper = "0.14"

tracing = "0.1"
tracing-core = "0.1.31"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3.9", features = ["env-filter", "json"] }

http = "0.2.9"

utoipa = { version = "3.5.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.1.5", features = ["axum"] }
